--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   
   
                     <div class="contact-left">
-    <h2>Let’s Get in Touch</h2>
+    <h2>Let's Get in Touch</h2>
         </div>
   <div class="contact-right">
           <form>
